# CUDA-Programming-Template

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.py
.devcontainer/: devcontainer.json
cmake/: TorchExtension.cmake
src/: CMakeLists.txt  __init__.py  main.cpp
src/basic/: CMakeLists.txt  main.cpp  vector-add.cu
src/torch/: CMakeLists.txt  gelu.cpp  gelu_kernel.cu
